src/objects/pymt__Payment_Method__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Credit cards and tokenized cardholder/account information for use in making payments through PaymentConnect.</description>
    <fields>
        <fullName>pymt__ACH_Trans_Type__c</fullName>
        <description>Type of ACH payment authorization obtained from the customer.</description>
        <inlineHelpText>Type of ACH payment authorization obtained from the customer.</inlineHelpText>
        <label>ACH Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>BOC</fullName>
                </value>
                <value>
                    <fullName>CCD</fullName>
                </value>
                <value>
                    <fullName>PPD</fullName>
                </value>
                <value>
                    <fullName>TEL</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Bank_Account_Name__c</fullName>
        <description>Typically the account holder&apos;s full name or business name.</description>
        <inlineHelpText>Typically the account holder&apos;s full name or business name.</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pymt__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Salutation__c</fullName>
        <label>Billing Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Card_Number__c</fullName>
        <label>Card Number</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pymt__Card_Type__c</fullName>
        <inlineHelpText>Credit Card Type</inlineHelpText>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Check_Number__c</fullName>
        <description>Required for ARC or BOC ACH transaction types.</description>
        <inlineHelpText>Required for ARC or BOC ACH transaction types.</inlineHelpText>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Customer_Profile_Id__c</fullName>
        <label>Customer Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this is the default payment method to use for billing and scheduled payments.</description>
        <inlineHelpText>Indicates this is the default payment method to use for billing and scheduled payments.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Expiration_Status__c</fullName>
        <formula>IF(  VALUE( pymt__Expiration_Year__c )  &lt; YEAR( TODAY() ), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),  IF( AND( VALUE(TEXT(pymt__Expiration_Month__c))  &lt;= MONTH( TODAY() ), VALUE ( pymt__Expiration_Year__c )   = YEAR( TODAY() )) , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays an icon indicating whether or not the payment method has expired.</inlineHelpText>
        <label>Expiration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Expiration_Year__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Issue_Number__c</fullName>
        <description>Used with some credit cards (e.g. Switch, Solo)</description>
        <inlineHelpText>Used with some credit cards (e.g. Switch, Solo)</inlineHelpText>
        <label>Issue Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Last_4_Digits__c</fullName>
        <description>Last 4 digits of credit card.</description>
        <inlineHelpText>Last 4 digits of credit card.</inlineHelpText>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Processor_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Payment processor this profile is associated with.</inlineHelpText>
        <label>Processor Connection</label>
        <referenceTo>pymt__Processor_Connection__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Profile_Id__c</fullName>
        <description>Record identifier used by the payment processor to reference this payment method.</description>
        <inlineHelpText>Record identifier used by the payment processor to reference this payment method.</inlineHelpText>
        <label>Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Routing_Number__c</fullName>
        <description>Bank account routing number.</description>
        <inlineHelpText>Bank account routing number (9 digits).</inlineHelpText>
        <label>Routing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Start_Month__c</fullName>
        <description>Used with some cards (e.g. Solo, Switch)</description>
        <inlineHelpText>Used with some cards (e.g. Solo, Switch)</inlineHelpText>
        <label>Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Start_Year__c</fullName>
        <description>Used with some credit cards (e.g. Switch, Solo)</description>
        <inlineHelpText>Used with some credit cards (e.g. Switch, Solo)</inlineHelpText>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>AuthNet CIM</fullName>
                </value>
                <value>
                    <fullName>eWay Customer Profile</fullName>
                </value>
                <value>
                    <fullName>PayPal Transaction Reference</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>NAME</columns>
        <columns>pymt__Billing_First_Name__c</columns>
        <columns>pymt__Billing_Last_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>pymt__Expiration_Status__c</columns>
        <columns>pymt__Card_Type__c</columns>
        <columns>pymt__Expiration_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>pymt__Recently_Created</fullName>
        <columns>NAME</columns>
        <columns>pymt__Contact__c</columns>
        <columns>pymt__Type__c</columns>
        <columns>pymt__Expiration_Month__c</columns>
        <columns>pymt__Expiration_Year__c</columns>
        <columns>pymt__Expiration_Status__c</columns>
        <columns>pymt__Last_4_Digits__c</columns>
        <columns>pymt__Default__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recently Created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <recordTypes>
        <fullName>pymt__AuthNet_CIM_Payment_Profile</fullName>
        <active>true</active>
        <description>Authorize.Net CIM Payment Profile</description>
        <label>AuthNet CIM Payment Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Bank_Account</fullName>
        <active>true</active>
        <description>Bank account details</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Credit_Card</fullName>
        <active>true</active>
        <description>Credit card details</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__PayPal_Transaction_Reference</fullName>
        <active>true</active>
        <description>A reference to a prior PayPal DirectPayment transaction for use in posting DoReferenceTransaction requests to PayPal</description>
        <label>PayPal Transaction Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__eWay_Customer_Profile</fullName>
        <active>true</active>
        <description>eWay managed customer profile for tokenized card storage and retrieval.</description>
        <label>eWay Customer Profile</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>